--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
   "scripts": {
     "test": "test"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "csslint": "^1.0.5",
+    "eslint": "^4.12.0",
+    "sass-lint": "^1.12.1"
+  }
 }
